--- a/app/src/main/res/layout/activity_demo_main.xml
+++ b/app/src/main/res/layout/activity_demo_main.xml
@@ -18,4 +18,15 @@
         android:layout_alignParentStart="true"
         android:layout_alignParentTop="true"
         android:text="Connect VPN" />
+
+    <Button
+        android:id="@+id/btn_disconnect"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentEnd="true"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentRight="true"
+        android:layout_alignParentStart="true"
+        android:layout_below="@+id/btn_connect"
+        android:text="Disconnect VPN" />
 </RelativeLayout>
