--- a/app/src/main/res/layout/activity_demo_main.xml
+++ b/app/src/main/res/layout/activity_demo_main.xml
@@ -1,32 +1,50 @@
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:paddingBottom="@dimen/activity_vertical_margin"
-    android:paddingLeft="@dimen/activity_horizontal_margin"
-    android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_vertical_margin"
-    tools:context="com.example.hackeris.toyvpn.MainActivity">
+    android:layout_height="wrap_content">
 
-    <Button
-        android:id="@+id/btn_connect"
-        android:layout_width="wrap_content"
+    <LinearLayout
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_alignParentEnd="true"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentRight="true"
-        android:layout_alignParentStart="true"
-        android:layout_alignParentTop="true"
-        android:text="Connect VPN" />
+        android:orientation="vertical"
+        android:padding="3mm">
 
-    <Button
-        android:id="@+id/btn_disconnect"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentEnd="true"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentRight="true"
-        android:layout_alignParentStart="true"
-        android:layout_below="@+id/btn_connect"
-        android:text="Disconnect VPN" />
-</RelativeLayout>
+        <TextView
+            style="@style/item"
+            android:text="@string/address" />
+
+        <EditText
+            android:id="@+id/address"
+            style="@style/item"
+            android:text="192.168.1.109" />
+
+        <TextView
+            style="@style/item"
+            android:text="@string/port" />
+
+        <EditText
+            android:id="@+id/port"
+            style="@style/item"
+            android:text="8000" />
+
+        <TextView
+            style="@style/item"
+            android:text="@string/secret" />
+
+        <EditText
+            android:id="@+id/secret"
+            style="@style/item"
+            android:password="true"
+            android:text="test" />
+
+        <Button
+            android:id="@+id/btn_connect"
+            style="@style/item"
+            android:text="@string/connect" />
+
+        <Button
+            android:id="@+id/btn_disconnect"
+            style="@style/item"
+            android:text="@string/disconnect" />
+
+    </LinearLayout>
+</ScrollView>
